<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_title"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/fragment2_dialog_title"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_id"
        android:gravity="center"
        android:hint="@string/fragment2_dialog_blank1"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:inputType="number"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_temperature"
        android:gravity="center"
        android:hint="@string/fragment2_dialog_blank2"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:inputType="number"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_time"
        android:gravity="center"
        android:hint="@string/fragment2_dialog_blank3"
        android:inputType="number"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />





</LinearLayout>