<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/fragment2_ultraviolet_lamp"
                android:textSize="12dp" />

            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/fragment2_open"
                    android:textSize="18dp" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/fragment2_close"
                    android:textSize="18dp" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/fragment2_period"
                    android:textSize="18dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/fragment2_electric_field"
                android:textSize="12dp" />
            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="3">
                <Button
                    android:id="@+id/electric_button"
                    android:text="off"
                    android:layout_margin="10dp"
                    android:background="@color/button_down"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textColor="@color/bg_white"
                    android:textSize="13dp" />

                <SeekBar
                    android:id="@+id/electric_bar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:secondaryProgress="0"
                    android:tag="1"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/electric_number"
                    android:text="0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:textSize="16dp" />


            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/fragment2_magnetic_field"
                android:textSize="12dp" />
            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="3">
                <Button
                    android:id="@+id/magnetic_button"
                    android:text="off"
                    android:layout_margin="10dp"
                    android:background="@color/button_down"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textColor="@color/bg_white"
                    android:textSize="13dp" />

                <SeekBar
                    android:id="@+id/magnetic_bar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:secondaryProgress="0"
                    android:tag="2"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/magnetic_number"
                    android:text="0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:textSize="16dp" />


            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/fragment2_temperature"
                android:textSize="20dp" />

            <ListView
                android:id="@+id/listview"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="230dp"></ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="+"
                    android:textSize="20dp" />
                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="-"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>