<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_margin="8dp"
                android:textSize="24dp"
                android:text="@string/fragment3_temperature_curve"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fragment3_color"
                    android:textSize="24dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:background="@color/colorPrimaryDark"
                    android:textSize="18dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:textSize="18dp" />

            </LinearLayout>

            <TextView
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_margin="8dp"
                android:textSize="24dp"
                android:text="@string/fragment3_experiment_process"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_margin="8dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:textSize="18dp"
                android:text="xxxxxxxxxxxxxxxxxxxx"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>